chore: added bootstrap essentials and grid and fixed some layout issues

--- a/frontend/src/app/management/locations-management/locations-management.component.scss
+++ b/frontend/src/app/management/locations-management/locations-management.component.scss
@@ -1,7 +1,3 @@
-.fullwidth {
-  width: 95%;
-}
-
 small {
   font-size: 12px;
   width: 60%;
